2014-08-18  Rene Liebscher <R.Liebscher@gmx.de>

	bug #43002 usbasp debug output typo
	* usbasp.c: fixed typos

2014-07-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #42662 clang warnings under FreeBSD 10.x
	* avrftdi.h: Fix header guard macro name.
	* pgm_type.c (programmers_types): Remove duplicate "const".

2014-07-16  Rene Liebscher <R.Liebscher@gmx.de>

	bug #42662 clang warnings under FreeBSD 10.x
	* avrftdi.c: remove warnings
	* buspirate.c: (Dito.)
	* dfu.c: (Dito.)
	* fileio.c: (Dito.)
	* libavrdude.h: (Dito.)
	* pickit2.c: (Dito.)
	* safemode.c: (Dito.)
	* ser_avrdoper.c: (Dito.)
	* ser_posix.c: (Dito.)
	* ser_win32.c: (Dito.)
	* stk500v2.c: (Dito.)
	* usb_libusb.c: (Dito.)
	* usbasp.c: (Dito.)

	* config_gram.y: fix problem when using parent part with usbpid lists
                         (existing list was extended not overwritten)

2014-07-11  Axel Wachtler <axel@uracoli.de>

	* avrftdi.c: rollback to vfprintf, fixed error from -r1305, (patch #8463)

2014-06-23  Rene Liebscher <R.Liebscher@gmx.de>

	* linux_ppdev.h: added missing msg level for avrdude_message
                         in ppi_claim/ppi_release macros
	* avrftdi.c: added break at end of default

2014-06-21  Rene Liebscher <R.Liebscher@gmx.de>

	patch #8419 fix ftdi_syncbb hang with libftdi 1
	* ft245r.c: set pthread cancel type to asynchronous, reorder ftdi_usb_close/deinit

2014-06-17  Rene Liebscher <R.Liebscher@gmx.de>

	* avrftdi_private.h: added missing msg level for avrdude_message 
                             in E/E_VOID macros

2014-06-17  Rene Liebscher <R.Liebscher@gmx.de>

	Removing exit calls from config parser
	* config.h: cleanup, left only internally needed definitions
	* config.c: removed exit calls, use yyerror and yywarning
	* config_gram.y: (Dito.)
	* lexer.l: (Dito.)
	* libavrdude.h: removed internal definitions of config parser
	* main.c: removed yyerror, it is now in config.c
	* jtagmkII.c: added missing free in error case
	* pgm.c: replaced exits by returns